# GPFL_recovery

./: CMakeLists.txt  EdgeDetection.cpp  EdgeDetection.h  Image4CGP.cpp  README.md  cgp.c  cgp.h  coeffs.txt  edge_detection_analysis.ipynb  main.cpp  obr-v3.ap  rec_pixels.txt  Новый текстовый документ.txt
.ipynb_checkpoints/: edge_detection_analysis-checkpoint.ipynb
Chromosomes/: chromo10.txt  chromo100.txt  chromo1000.txt  chromo10000.txt  chromo1001.txt  chromo1003.txt  chromo1004.txt  chromo1005.txt  chromo1006.txt  chromo1009.txt  chromo1010.txt  chromo1011.txt  chromo1012.txt  chromo1013.txt  chromo1014.txt  chromo1015.txt  chromo1016.txt  chromo1018.txt  chromo1019.txt  chromo1020.txt  chromo1022.txt  chromo1023.txt  chromo1024.txt  chromo1026.txt  chromo1031.txt  chromo1033.txt  chromo1034.txt  chromo1035.txt  chromo1036.txt  chromo1037.txt  chromo1038.txt  chromo1039.txt  chromo104.txt  chromo1040.txt  chromo1041.txt  chromo1042.txt  chromo1043.txt  chromo1045.txt  chromo1049.txt  chromo105.txt  (+7831 more)
Chromosomes_6000/: chromo1.txt  chromo1002.txt  chromo1007.txt  chromo1008.txt  chromo101.txt  chromo1017.txt  chromo102.txt  chromo1021.txt  chromo1025.txt  chromo1027.txt  chromo1028.txt  chromo1029.txt  chromo103.txt  chromo1030.txt  chromo1032.txt  chromo1044.txt  chromo1046.txt  chromo1047.txt  chromo1048.txt  chromo1054.txt  chromo1056.txt  chromo1058.txt  chromo1060.txt  chromo1061.txt  chromo1062.txt  chromo1065.txt  chromo1068.txt  chromo1069.txt  chromo1073.txt  chromo1077.txt  chromo1078.txt  chromo1079.txt  chromo108.txt  chromo1081.txt  chromo1086.txt  (+2092 more)
(+6 files in other folders)
